--- a/.env
+++ b/.env
@@ -1,21 +1,32 @@
-# App
+
+# Server
 HOST=0.0.0.0
 PORT=1337
-NODE_ENV=production
+
+# Secrets
+APP_KEYS=J4EBiG5TswHmGiLjPMOmuQ==,W7v81pGqRwzVc6Gstrl00w==,IW6auIdbrku7ZKFck8YkMg==,ou27vU2H3VSrHE+wRMKaNA==
+API_TOKEN_SALT=YB5kTBiGej0ew1yPrHwOiQ==
+ADMIN_JWT_SECRET=BWK6crNPI1f4+o5Kf4+6cw==
+TRANSFER_TOKEN_SALT=N7OF6Fp6lFjC6EZNXLRPVw==
+ENCRYPTION_KEY=oIPRyUsX09Z3vYEPIRTSkA==
+JWT_SECRET=rCuODBP32toITe8dihOsuA==
 
 # Database
-DATABASE_CLIENT=postgres
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_NAME=strapi
-DATABASE_USERNAME=strapi
-DATABASE_PASSWORD=strapi
-DATABASE_SSL=false
+# DATABASE_CLIENT=postgres
+# DATABASE_HOST=localhost
+# DATABASE_PORT=5432
+# DATABASE_NAME=arena-blanca-db
+# DATABASE_USERNAME=postgres
+# DATABASE_PASSWORD=1234
+# DATABASE_SSL=false
+# DATABASE_FILENAME=
 
-# Strapi Security
-APP_KEYS=toBeModified1,toBeModified2
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-TRANSFER_TOKEN_SALT=tobemodified
-JWT_SECRET=tobemodified
-ENCRYPTION_KEY=tobemodified
+DATABASE_CLIENT=postgres
+DATABASE_HOST=dpg-d3n3gc3ipnbc73eg98ig-a.oregon-postgres.render.com
+DATABASE_PORT=5432
+DATABASE_NAME=arena_blanca_db
+DATABASE_USERNAME=admin
+DATABASE_PASSWORD=nHz1dMzc5LAmzTVsszyfUcP0R0qTs84i
+DATABASE_SSL=true
+
+# dpg-d3n3gc3ipnbc73eg98ig-a.oregon-postgres.render.com
