--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,17 @@
+# App Configuration
+NODE_ENV=production
 HOST=0.0.0.0
-PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-TRANSFER_TOKEN_SALT=tobemodified
-JWT_SECRET=tobemodified
-ENCRYPTION_KEY=tobemodified
+PORT=10000
+PUBLIC_URL=https://arena-blanca-strapi.onrender.com
+
+# Database
+DATABASE_CLIENT=postgres
+DATABASE_URL=postgresql://usuario:password@host:puerto/database
+
+# Strapi Security Keys (genera nuevas para producción)
+APP_KEYS=clave1,clave2,clave3,clave4
+API_TOKEN_SALT=tu_salt_aqui
+ADMIN_JWT_SECRET=tu_jwt_secret_aqui
+TRANSFER_TOKEN_SALT=tu_transfer_salt_aqui
+JWT_SECRET=tu_jwt_secret_aqui
+ENCRYPTION_KEY=tu_encryption_key_aqui
