--- a/.env
+++ b/.env
@@ -22,9 +22,9 @@ JWT_SECRET=rCuODBP32toITe8dihOsuA==
 # DATABASE_FILENAME=
 
 DATABASE_CLIENT=postgres
-DATABASE_HOST=dpg-d3n61i6r433s73av3at0-a.oregon-postgres.render.com
+DATABASE_HOST=postgres.railway.internal
 DATABASE_PORT=5432
 DATABASE_NAME=arena_blanca_db_wrx9
 DATABASE_USERNAME=admin
-DATABASE_PASSWORD=itZU67I0vWIOk5xf5YVPtlaHH0ZsXrQm
+DATABASE_PASSWORD=mcAIIJaZpqOcMXImUqPOKFfVSQuScqbQ
 DATABASE_SSL=true
