changes to railway

--- a/.env
+++ b/.env
@@ -4,12 +4,12 @@ HOST=0.0.0.0
 PORT=1337
 
 # Secrets
-APP_KEYS=J4EBiG5TswHmGiLjPMOmuQ==,W7v81pGqRwzVc6Gstrl00w==,IW6auIdbrku7ZKFck8YkMg==,ou27vU2H3VSrHE+wRMKaNA==
-API_TOKEN_SALT=YB5kTBiGej0ew1yPrHwOiQ==
-ADMIN_JWT_SECRET=BWK6crNPI1f4+o5Kf4+6cw==
-TRANSFER_TOKEN_SALT=N7OF6Fp6lFjC6EZNXLRPVw==
-ENCRYPTION_KEY=oIPRyUsX09Z3vYEPIRTSkA==
-JWT_SECRET=rCuODBP32toITe8dihOsuA==
+# APP_KEYS=J4EBiG5TswHmGiLjPMOmuQ==,W7v81pGqRwzVc6Gstrl00w==,IW6auIdbrku7ZKFck8YkMg==,ou27vU2H3VSrHE+wRMKaNA==
+# API_TOKEN_SALT=YB5kTBiGej0ew1yPrHwOiQ==
+# ADMIN_JWT_SECRET=BWK6crNPI1f4+o5Kf4+6cw==
+# TRANSFER_TOKEN_SALT=N7OF6Fp6lFjC6EZNXLRPVw==
+# ENCRYPTION_KEY=oIPRyUsX09Z3vYEPIRTSkA==
+# JWT_SECRET=rCuODBP32toITe8dihOsuA==
 
 # Database
 # DATABASE_CLIENT=postgres
@@ -21,10 +21,28 @@ JWT_SECRET=rCuODBP32toITe8dihOsuA==
 # DATABASE_SSL=false
 # DATABASE_FILENAME=
 
+# DATABASE_CLIENT=postgres
+# DATABASE_HOST=postgres.railway.internal
+# DATABASE_PORT=5432
+# DATABASE_NAME=arena_blanca_db_wrx9
+# DATABASE_USERNAME=admin
+# DATABASE_PASSWORD=mcAIIJaZpqOcMXImUqPOKFfVSQuScqbQ
+# DATABASE_SSL=true
+# postgresql://postgres:mcAIIJaZpqOcMXImUqPOKFfVSQuScqbQ@gondola.proxy.rlwy.net:20941/railway
+ADMIN_JWT_SECRET=e9ewFhxfPByDjhvtG1YGCg==
+API_TOKEN_SALT=BUM8r9gjWchf0N2i5qTQnQ==
+APP_KEYS=0jwy19mNHFzqHITe0c+6cg==,cKWlJ4jq8IaTVroTGgZcNw==,0LIIaIVdJVuynrS6d7okTQ==,yfVI+A86mB2W3on7VsZ7UA==
 DATABASE_CLIENT=postgres
-DATABASE_HOST=postgres.railway.internal
-DATABASE_PORT=5432
-DATABASE_NAME=arena_blanca_db_wrx9
-DATABASE_USERNAME=admin
+# DATABASE_HOST=postgres.railway.internal
+DATABASE_HOST=gondola.proxy.rlwy.net
+DATABASE_NAME=railway
 DATABASE_PASSWORD=mcAIIJaZpqOcMXImUqPOKFfVSQuScqbQ
-DATABASE_SSL=true
+# DATABASE_PORT=5432
+DATABASE_PORT=20941
+DATABASE_SSL=false
+DATABASE_USERNAME=postgres
+ENCRYPTION_KEY=M4CLcCqu4Ja21Za8f1TOAg==
+HOST=0.0.0.0
+JWT_SECRET=rCuODBP32toITe8dihOsuA==
+PORT=1337
+TRANSFER_TOKEN_SALT=E8b0Iy4Fki+4iArUtWlZbA==
